--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
   font-size: 3rem;
 }
 
-.nav-bar a{
-  padding-left: 1.4rem;
-  padding-right: 1.4rem;
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1.5rem !important;
+    padding-left: 1.5rem !important;
 }
 
 .logo{
